--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <nav id="desktop-nav">
       <div class="logo">Prem M</div>
       <div>
-        <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
+        <ul class="nav-links"> <a href="#top"></a>
+          <!-- <li><a href="#about">About</a></li> -->
+          <li><a href="#experience">My Skills</a></li>
+          <li><a href="#projects">Recent Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">John Doe</div>
+      <div class="logo">Prem M</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -29,30 +29,31 @@
           <span></span>
         </div>
         <div class="menu-links">
-          <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+          <!-- <li><a href="#about" onclick="toggleMenu()">About</a></li> -->
+          <li><a href="#experience" onclick="toggleMenu()">Skills</a></li>
+          <li><a href="#projects" onclick="toggleMenu()">Recent Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
+         <img src="./assets/My-profile-temp'.jpg" alt="John Doe profile picture" />
+        
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Prem Mourya</h1>
-        <p class="section__text__p2">Full Stack Web Developer</p>
+        <p class="section__text__p2">Web Developer | MERN</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/PremMourya-Resume.pdf')"
           >
-            Download CV
+            My CV
           </button>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
-            Contact Info
+          <button class="btn btn-color-1" onclick="location.href='./#about'">
+            About me
           </button>
         </div>
         <div id="socials-container">
@@ -60,13 +61,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://linkedin.com/in/prem-mourya/'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/Prem-Mourya'"
           />
         </div>
       </div>
@@ -91,7 +92,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>1+ years <br />Frontend Development</p>
+              <p>Developed<br />Multiple industry ready projects.</p>
             </div>
             <div class="details-container">
               <img
@@ -100,17 +101,16 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>B.Tech <br />Computer Science</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              Highly skilled full-stack web developer(MERN) with extensive experience in designing, developing, and deploying scalable web
+              applications. Proficient in a range of technologies including HTML5, CSS, JavaScript, Tailwind Css, React, MonoDB, Express, Git | Github, Prompt AI
+              . Proven track record of successfully completing multiple projects. Seeking a challenging role to leverage my
+              expertise and contribute to innovative projects.
+
             </p>
           </div>
         </div>
@@ -124,7 +124,7 @@
     </section>
     <section id="experience">
       <p class="section__text__p1">Explore My</p>
-      <h1 class="title">Experience</h1>
+      <h1 class="title">Skills</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
@@ -137,8 +137,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
+                  <h3>HTML5</h3>
+                  <p>Advanced</p>
                 </div>
               </article>
               <article>
@@ -149,7 +149,7 @@
                 />
                 <div>
                   <h3>CSS</h3>
-                  <p>Experienced</p>
+                  <p>Advanced</p>
                 </div>
               </article>
               <article>
@@ -159,8 +159,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SASS</h3>
-                  <p>Intermediate</p>
+                  <h3>Tailwind</h3>
+                  <p>Advanced</p>
                 </div>
               </article>
               <article>
@@ -171,7 +171,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <p>Advanced</p>
                 </div>
               </article>
               <article>
@@ -181,8 +181,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>TypeScript</h3>
-                  <p>Basic</p>
+                  <h3>React</h3>
+                  <p>Advanced</p>
                 </div>
               </article>
               <article>
@@ -192,14 +192,14 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Material UI</h3>
+                  <h3>UI Desgin</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Backend Development</h2>
             <div class="article-container">
               <article>
                 <img
@@ -208,8 +208,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>PostgreSQL</h3>
-                  <p>Basic</p>
+                  <h3>MonoDB</h3>
+                  <p>Advanced</p>
                 </div>
               </article>
               <article>
@@ -220,7 +220,7 @@
                 />
                 <div>
                   <h3>Node JS</h3>
-                  <p>Intermediate</p>
+                  <p>Advanced</p>
                 </div>
               </article>
               <article>
@@ -231,7 +231,7 @@
                 />
                 <div>
                   <h3>Express JS</h3>
-                  <p>Intermediate</p>
+                  <p>Advanced</p>
                 </div>
               </article>
               <article>
@@ -241,8 +241,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Git</h3>
-                  <p>Intermediate</p>
+                  <h3>Git | Github</h3>
+                  <p>Advanced</p>
                 </div>
               </article>
             </div>
@@ -257,8 +257,8 @@
       />
     </section>
     <section id="projects">
-      <p class="section__text__p1">Browse My Recent</p>
-      <h1 class="title">Projects</h1>
+      <p class="section__text__p1">Checkout my</p>
+      <h1 class="title">Recent Projects</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
@@ -269,17 +269,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Netfilx Clone</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Prem-Mourya/Netflix-Clone'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://netflix-clone-prem-mourya.vercel.app'"
               >
                 Live Demo
               </button>
@@ -293,7 +293,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Adventure Parallex</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -317,7 +317,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Portfolio website</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -329,6 +329,48 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
+            </div>
+            <h2 class="experience-sub-title project-title">Netfilx Clone</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Prem-Mourya/Netflix-Clone'">
+                Github
+              </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://netflix-clone-prem-mourya.vercel.app'">
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
+            </div>
+            <h2 class="experience-sub-title project-title">Netfilx Clone</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Prem-Mourya/Netflix-Clone'">
+                Github
+              </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://netflix-clone-prem-mourya.vercel.app'">
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
+            </div>
+            <h2 class="experience-sub-title project-title">Netfilx Clone</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Prem-Mourya/Netflix-Clone'">
+                Github
+              </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://netflix-clone-prem-mourya.vercel.app'">
                 Live Demo
               </button>
             </div>
@@ -352,7 +394,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a href="mailto:examplemail@gmail.com">premmourya998@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -360,22 +402,25 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></p>
         </div>
       </div>
     </section>
     <footer>
       <nav>
-        <div class="nav-links-container">
-          <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
+      <div class="btn-container">
+        <button class="btn btn-color-2" onclick="window.open('./assets/PremMourya-Resume.pdf')">
+          My CV
+        </button>
+        <button class="btn btn-color-1" onclick="window.open (href='mailto:examplemail@gmail.com')">
+          Hire me
+        </button>
+        <button class="btn btn-color-2" onclick="location.href=('./#top')">
+          Home
+        </button>
+      </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2024 Prem Mourya. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
