--- a/index.html
+++ b/index.html
@@ -404,6 +404,14 @@
           />
           <p><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></p>
         </div>
+         <div class="contact-info-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="LinkedIn icon"
+            class="icon contact-icon"
+          />
+          <p><a href="https://www.linkedin.com" target="_blank">Instagram Page</a></p>
+        </div>
       </div>
     </section>
     <footer>
